--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@ SERVER_PORT=3040
 USER_AGENT="Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/123.0.0.0 Safari/537.36"
 NEW_SESSION_RETRIES=5
 API_KEY=
-CLOUDFLARED=true
+CLOUDFLARED=false
 
 PROXY=false
 PROXY_HOST=proxy.example.com
